--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,18 @@
-#spring.profiles.active=local
-##운영 환경에서는 validate를 사용
-#spring.jpa.show-sql=true
+spring.profiles.active=local
+#운영 환경에서는 validate를 사용
+spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create-drop
-## 개발시 SQL 로깅을 하여 어떤 값으로 어떤 SQL이 실행되는지 확인
-#spring.jpa.properties.hibernate.format_sql=true
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-## 톰캣 기본 요청 사이즈는 2MB
-#server.tomcat.max-http-form-post-size=5MB
-## HTML <FORM>에서 th:method에서 PUT 또는 DELETE를 사용해서 보내는 _method를 사용해서  @PutMapping과 @DeleteMapping으로 요청을 맵핑.
-#spring.mvc.hiddenmethod.filter.enabled=true
-##정적 리소스에 변화가 있을 때 바로 반영
-#spring.devtools.livereload.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+# 개발시 SQL 로깅을 하여 어떤 값으로 어떤 SQL이 실행되는지 확인
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# 톰캣 기본 요청 사이즈는 2MB
+server.tomcat.max-http-form-post-size=5MB
+# HTML <FORM>에서 th:method에서 PUT 또는 DELETE를 사용해서 보내는 _method를 사용해서  @PutMapping과 @DeleteMapping으로 요청을 맵핑.
+spring.mvc.hiddenmethod.filter.enabled=true
+#정적 리소스에 변화가 있을 때 바로 반영
+spring.devtools.livereload.enabled=true
 
 # 웹 서버 호스트
 app.host=http://localhost:8080
@@ -30,7 +31,7 @@ spring.thymeleaf.check-template-location=true
 # MySQL 설정
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # DB Source URL
-spring.datasource.url=jdbc:mysql://mydb.c6sl60yvw427.ap-southeast-2.rds.amazonaws.com
+spring.datasource.url=jdbc:mysql://mydb.c6sl60yvw427.ap-southeast-2.rds.amazonaws.com:3306/mydb
 # DB username
 spring.datasource.username=root
 # DB password
