--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=local
 #운영 환경에서는 validate를 사용
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 # 개발시 SQL 로깅을 하여 어떤 값으로 어떤 SQL이 실행되는지 확인
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
@@ -29,8 +29,8 @@ spring.thymeleaf.check-template-location=true
 # MySQL 설정
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # DB Source URL
-spring.datasource.url=jdbc:mysql://mydb.c6sl60yvw427.ap-southeast-2.rds.amazonaws.com:3306/mydb
+spring.datasource.url=jdbc:mysql://mydb1.cx3p4afrlaxg.ap-northeast-2.rds.amazonaws.com:3306/inseoul
 # DB username
 spring.datasource.username=root
 # DB password
-spring.datasource.password=gkdms17000
+spring.datasource.password=dbsgkdms17
